--- a/Artext.csproj
+++ b/Artext.csproj
@@ -57,4 +57,8 @@
 	  <None Remove="Structures\NewFile1.txt" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Structures\FileExtension\" />
+	</ItemGroup>
+
 </Project>
