--- a/Artext.csproj
+++ b/Artext.csproj
@@ -28,6 +28,7 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -55,10 +56,6 @@
 	<ItemGroup>
 	  <None Remove="Structures\FileExtension\NewFile1.txt" />
 	  <None Remove="Structures\NewFile1.txt" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Structures\FileExtension\" />
 	</ItemGroup>
 
 </Project>
